--- a/Ex1/Ex1_aprendizagem_maquina.ipynb
+++ b/Ex1/Ex1_aprendizagem_maquina.ipynb
@@ -41833,7 +41833,7 @@
    ],
    "source": [
     "pyplot.plot(PlotData[0],PlotData[1])\n",
-    "pyplot.ylabel(\"Gradient\")\n",
+    "pyplot.ylabel(\"Gradiente\")\n",
     "pyplot.xlabel(\"Iteracao\")\n",
     "pyplot.show()\n"
    ]
@@ -41863,6 +41863,8 @@
    ],
    "source": [
     "pyplot.plot(PlotData[0][:7],PlotData[1][:7])\n",
+    "pyplot.ylabel(\"Gradiente\")\n",
+    "pyplot.xlabel(\"Iteracao\")\n",
     "pyplot.show()"
    ]
   },
@@ -41891,6 +41893,8 @@
    ],
    "source": [
     "pyplot.plot(PlotData[0][7:],PlotData[1][7:])\n",
+    "pyplot.ylabel(\"Gradiente\")\n",
+    "pyplot.xlabel(\"Iteracao\")\n",
     "pyplot.show()"
    ]
   },
