Removendo a coluna de 1s do X para usar o scikit

--- a/Ex2/RegressãoLinearMultipla.ipynb
+++ b/Ex2/RegressãoLinearMultipla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
    "source": [
     "def step_gradient_vectorized(w_current,X,Y,learningRate):\n",
     "    res = Y - np.dot(X,w_current)\n",
-    "    gradient = np.multiply(res,X)\n",
+    "    gradient = np.multiply(X, res)\n",
     "    gradient = np.sum(gradient,axis=0)\n",
     "    gradient = gradient[:,np.newaxis]\n",
     "    new_w = w_current + 2 * learningRate * gradient\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -62,17 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iniciando gradiente descendente com todos os parâmetros iniciais a 0 e erro = [[ 54.47995386]]\n",
+      "Iniciando gradiente descendente com todos os parâmetros iniciais 0 e erro = 54.47995385562645\n",
       "Running...\n",
-      "Gradiente descendente convergiu com w0 = 1.7214319757862273, w1 = 0.10333313833600129, w2 = 0.04718170808359163, w3 = 0.16406125198726337, w4 = 0.38200508559551033, w5 = 0.02047849242976369, error = 0.41133944383813986\n",
-      "Versão vetorizada rodou em: 3037.3594760894775 ms\n"
+      "Gradiente descendente convergiu com w0 = 1.7360835733827988, w1 = 0.10307060281002467, w2 = 0.04651120096128541, w3 = 0.1640946350017253, w4 = 0.3812610918698945, w5 = 0.02029819094056926, error = 0.4113376077735087\n",
+      "Versão vetorizada rodou em: 3068.3753490448 ms\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
     "\n",
     "init_w = np.zeros((len(X[0]),1))\n",
     "learning_rate = 0.00003\n",
-    "epsilon = 0.01\n",
+    "epsilon = 0.001\n",
     "print(\"Iniciando gradiente descendente com todos os parâmetros iniciais 0 e erro = {0}\".format(compute_mse_vectorized(init_w, X,Y)[0][0]))\n",
     "print(\"Running...\")\n",
     "tic = time.time()\n",
@@ -96,30 +96,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X [:,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.          0.10304143  0.0464367   0.16409834  0.38117843  0.02027816]]\n"
+      "intercept=[ 1.73771151], coef=[[ 0.10304143  0.0464367   0.16409834  0.38117843  0.02027816]]\n"
      ]
     }
    ],
    "source": [
     "reg = LinearRegression()\n",
     "reg.fit(X,Y)\n",
-    "print(reg.coef_)"
+    "print(\"intercept={0}, coef={1}\".format(reg.intercept_,reg.coef_))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "É possível observar que os coeficientes obtidos usando a regressão linear do scikit-learn e os obtidos com o gradiente descendente são muito próximos.\n",
-    "A maior diferença está no coeficiente w0 que é igual a 0 pelo scikit-learn, e 1.72 pelo gradiente descendente, todos os outros coeficiente possuem diferença menor que 0.001."
+    "É possível observar que os coeficientes obtidos usando a regressão linear do scikit-learn e os obtidos com o gradiente descendente são muito próximos."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
