--- a/Ex2/RegressãoLinearMultipla.ipynb
+++ b/Ex2/RegressãoLinearMultipla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -28,8 +28,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Versão vetorizada para qualquer quantidade de variáveis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -38,15 +45,15 @@
     "def step_gradient_vectorized(w_current,X,Y,learningRate):\n",
     "    res = Y - np.dot(X,w_current)\n",
     "    gradient = np.multiply(X, res)\n",
-    "    gradient = np.sum(gradient,axis=0)\n",
+    "    gradient = -2 * np.sum(gradient,axis=0)\n",
     "    gradient = gradient[:,np.newaxis]\n",
-    "    new_w = w_current + 2 * learningRate * gradient\n",
-    "    return [new_w,gradient]"
+    "    new_w = w_current - learningRate * gradient\n",
+    "    return [new_w, gradient]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -56,13 +63,13 @@
     "    w = starting_w\n",
     "    grad = np.array([np.inf])\n",
     "    while (np.linalg.norm(grad)>=epsilon):\n",
-    "        w,grad = step_gradient_vectorized(w, X, Y, learning_rate)\n",
+    "        w, grad = step_gradient_vectorized(w, X, Y, learning_rate)\n",
     "    return w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -71,8 +78,8 @@
      "text": [
       "Iniciando gradiente descendente com todos os parâmetros iniciais 0 e erro = 54.47995385562645\n",
       "Running...\n",
-      "Gradiente descendente convergiu com w0 = 1.7360835733827988, w1 = 0.10307060281002467, w2 = 0.04651120096128541, w3 = 0.1640946350017253, w4 = 0.3812610918698945, w5 = 0.02029819094056926, error = 0.4113376077735087\n",
-      "Versão vetorizada rodou em: 3068.3753490448 ms\n"
+      "Gradiente descendente convergiu com coeficientes: [ 1.73608355  0.1030706   0.0465112   0.16409463  0.38126109  0.02029819] e error = 0.411337607774082\n",
+      "Versão vetorizada rodou em: 2644.449234008789 ms\n"
      ]
     }
    ],
@@ -83,15 +90,22 @@
     "Y = points[:,-1][:,np.newaxis]\n",
     "\n",
     "init_w = np.zeros((len(X[0]),1))\n",
-    "learning_rate = 0.00003\n",
-    "epsilon = 0.001\n",
+    "learning_rate = 0.000035\n",
+    "epsilon = 0.0001\n",
     "print(\"Iniciando gradiente descendente com todos os parâmetros iniciais 0 e erro = {0}\".format(compute_mse_vectorized(init_w, X,Y)[0][0]))\n",
     "print(\"Running...\")\n",
     "tic = time.time()\n",
     "w = gradient_descent_runner_vectorized(init_w, X,Y, learning_rate, epsilon)\n",
     "toc = time.time()\n",
-    "print(\"Gradiente descendente convergiu com w0 = {0}, w1 = {1}, w2 = {2}, w3 = {3}, w4 = {4}, w5 = {5}, error = {6}\".format(w[0][0], w[1][0], w[2][0], w[3][0], w[4][0], w[5][0], compute_mse_vectorized(w,X,Y)[0][0]))\n",
+    "print(\"Gradiente descendente convergiu com coeficientes: {0} e erro = {1}\".format(w[:,0], compute_mse_vectorized(w,X,Y)[0][0]))\n",
     "print(\"Versão vetorizada rodou em: \" + str(1000*(toc-tic)) + \" ms\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Removendo a primeira coluna com tudo 1 que foi adicionada aos dados para poder usar o scikit."
    ]
   },
   {
@@ -101,6 +115,13 @@
    "outputs": [],
    "source": [
     "X = X [:,1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regressão linear com o scikit"
    ]
   },
   {
