--- a/Ex2/RegressãoLinearMultipla.ipynb
+++ b/Ex2/RegressãoLinearMultipla.ipynb
@@ -140,7 +140,7 @@
    "source": [
     "reg = LinearRegression()\n",
     "reg.fit(X,Y)\n",
-    "print(\"intercept={0}, coef={1}\".format(reg.intercept_,reg.coef_))\n"
+    "print(\"intercept={0}, coef={1}\".format(reg.intercept_,reg.coef_))"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
