--- a/Ex4/previsao_deputados.ipynb
+++ b/Ex4/previsao_deputados.ipynb
@@ -1146,7 +1146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A importância das variáveis varia em cada modelo, na regressão logística a variável mais importante é se ele já é um deputado, na arvore de decisão é o valor de receita"
+    "A importância das variáveis varia em cada modelo, na regressão logística a variável mais importante é se ele já é um deputado, na arvore de decisão é o valor de receita e no modelo adaboost o mais importante é se o candidato pertence ao partido dos trabalhadores ou não. Em todos os modelos as variáveis mais importate fazem "
    ]
   },
   {
